--- a/personal_site/config.toml
+++ b/personal_site/config.toml
@@ -23,3 +23,4 @@ colorRightColumnBodyText = "#666"
 colorRightColumnIconPrimary = "#fff"
 colorRightColumnIconBackground = "#e3bfb8"
 pages = 1
+publishDir="docs"
